[gd_scene load_steps=11 format=3 uid="uid://cckpww61jlguj"]

[ext_resource type="Texture2D" uid="uid://dqubvgudpdmts" path="res://OWBackground.png" id="1_v8j4q"]
[ext_resource type="PackedScene" uid="uid://b4rurp8wei1rp" path="res://Levels/LevelPlaceables/enemy_spawner.tscn" id="4_4ivfi"]
[ext_resource type="PackedScene" uid="uid://dx43gaa0rr7q1" path="res://Enemies/enemy_ranged.tscn" id="5_6byrv"]
[ext_resource type="Script" path="res://UI/canvas_layer.gd" id="6_b2lbv"]
[ext_resource type="PackedScene" uid="uid://b4qjjq0v6o2kw" path="res://UI/player_ready_indicator.tscn" id="6_blcs8"]
[ext_resource type="Script" path="res://Multiplayer/bullet_spawner.gd" id="6_rscnf"]
[ext_resource type="PackedScene" uid="uid://w6mllopse3wt" path="res://UI/upgrade_screen_panel.tscn" id="7_y7jy2"]
[ext_resource type="PackedScene" uid="uid://dt5e62yjm628l" path="res://Levels/LevelPlaceables/wall.tscn" id="8_0gogc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlept"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0sha0"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[node name="Playground" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
offset_left = -572.0
offset_right = 1428.0
offset_bottom = 2000.0
scale = Vector2(1.48, 1)
texture = ExtResource("1_v8j4q")
expand_mode = 1

[node name="PlayerSpawnPoints" type="Node2D" parent="."]

[node name="PlayerSpawnPoint1" type="Node2D" parent="PlayerSpawnPoints"]
position = Vector2(915, 983)

[node name="ColorRect" type="ColorRect" parent="PlayerSpawnPoints/PlayerSpawnPoint1"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0.407246, 0.338652, 1)

[node name="PlayerSpawnPoint2" type="Node2D" parent="PlayerSpawnPoints"]
position = Vector2(1169, 985)

[node name="ColorRect" type="ColorRect" parent="PlayerSpawnPoints/PlayerSpawnPoint2"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(5.77569e-07, 0.720544, 0.427596, 1)

[node name="PlayerSpawnPoint3" type="Node2D" parent="PlayerSpawnPoints"]
position = Vector2(919, 1201)

[node name="PlayerSpawnPoint4" type="Node2D" parent="PlayerSpawnPoints"]
position = Vector2(1173, 1203)

[node name="EnemySpawner" parent="." instance=ExtResource("4_4ivfi")]
position = Vector2(-787, 999)
scale = Vector2(8, 100)

[node name="EnemySpawner2" parent="." instance=ExtResource("4_4ivfi")]
position = Vector2(932, -196)
scale = Vector2(150, 8)

[node name="EnemySpawner3" parent="." instance=ExtResource("4_4ivfi")]
position = Vector2(2626, 997)
scale = Vector2(8, 100)
enemy_scene = ExtResource("5_6byrv")

[node name="EnemySpawner4" parent="." instance=ExtResource("4_4ivfi")]
position = Vector2(932, 2206)
scale = Vector2(150, 8)

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("_game_over_screen", "_retry_votes_container", "_timer_text")]
script = ExtResource("6_b2lbv")
_game_over_screen = NodePath("GameOverScreen")
_retry_votes_container = NodePath("GameOverScreen/ButtonContainer/RetryButton/RetryVotesContainer")
_timer_text = NodePath("Timer")

[node name="ExperienceBar" type="ProgressBar" parent="CanvasLayer"]
modulate = Color(0.00402517, 0.17334, 0.76886, 1)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
max_value = 1.0
value = 0.5

[node name="LevelLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_right = 103.0
offset_bottom = -29.0
grow_vertical = 0
text = "Level: 1"

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
self_modulate = Color(0.780694, 4.54836e-06, 4.81307e-07, 1)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -94.0
offset_bottom = -28.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_rlept")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="HealthLabel" type="Label" parent="CanvasLayer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Abilities" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -165.0
offset_top = -88.0
offset_right = 165.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Panel" type="Panel" parent="CanvasLayer/Abilities"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0sha0")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Abilities/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Panel2" type="Panel" parent="CanvasLayer/Abilities"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0sha0")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Abilities/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Panel3" type="Panel" parent="CanvasLayer/Abilities"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0sha0")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Abilities/Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Panel4" type="Panel" parent="CanvasLayer/Abilities"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0sha0")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Abilities/Panel4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Panel5" type="Panel" parent="CanvasLayer/Abilities"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0sha0")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Abilities/Panel5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="UpgradeScreenPanel" parent="CanvasLayer" instance=ExtResource("7_y7jy2")]
process_mode = 2
visible = false

[node name="GameOverScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.286275)

[node name="GameOver" type="Label" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 48.0
offset_right = 320.0
offset_bottom = 176.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 90
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -264.0
offset_right = 159.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 7

[node name="RetryButton" type="Button" parent="CanvasLayer/GameOverScreen/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
text = "Retry"

[node name="RetryVotesContainer" type="HBoxContainer" parent="CanvasLayer/GameOverScreen/ButtonContainer/RetryButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -20.0
offset_right = 181.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="PlayerReadyIndicator" parent="CanvasLayer/GameOverScreen/ButtonContainer/RetryButton/RetryVotesContainer" instance=ExtResource("6_blcs8")]
layout_mode = 2

[node name="PlayerReadyIndicator2" parent="CanvasLayer/GameOverScreen/ButtonContainer/RetryButton/RetryVotesContainer" instance=ExtResource("6_blcs8")]
layout_mode = 2

[node name="PlayerReadyIndicator3" parent="CanvasLayer/GameOverScreen/ButtonContainer/RetryButton/RetryVotesContainer" instance=ExtResource("6_blcs8")]
layout_mode = 2

[node name="PlayerReadyIndicator4" parent="CanvasLayer/GameOverScreen/ButtonContainer/RetryButton/RetryVotesContainer" instance=ExtResource("6_blcs8")]
layout_mode = 2

[node name="LobbyButton" type="Button" parent="CanvasLayer/GameOverScreen/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back to Lobby
"

[node name="QuitButton" type="Button" parent="CanvasLayer/GameOverScreen/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit to Main Menu
"

[node name="Timer" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 33.0
offset_right = 79.0
offset_bottom = 97.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 46
text = "00:00"
horizontal_alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player/player_character_body.tscn", "res://Enemies/enemy_ranged.tscn", "res://Enemies/enemy.tscn", "res://Pickups/exp_orb.tscn", "res://EnemyProjectiles/bullet_enemy_ranged.tscn")
spawn_path = NodePath("..")

[node name="BulletSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Powerups/boomerang_bullet.tscn", "res://Powerups/orbit_bullet.tscn", "res://Powerups/revolving_bullet.tscn", "res://Powerups/orbit_bullet.tscn")
spawn_path = NodePath("..")
script = ExtResource("6_rscnf")

[node name="Walls" type="Node2D" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource("8_0gogc")]
position = Vector2(-647, 1031)
scale = Vector2(1.185, 18.025)

[node name="Wall2" parent="Walls" instance=ExtResource("8_0gogc")]
position = Vector2(2466, 994)
scale = Vector2(1.185, 18.025)

[node name="Wall3" parent="Walls" instance=ExtResource("8_0gogc")]
position = Vector2(916, 2061)
scale = Vector2(23.32, 0.945)

[node name="Wall4" parent="Walls" instance=ExtResource("8_0gogc")]
position = Vector2(908, -61)
scale = Vector2(23.32, 0.945)

[connection signal="toggled" from="CanvasLayer/GameOverScreen/ButtonContainer/RetryButton" to="CanvasLayer" method="_on_retry_button_toggled"]
[connection signal="button_down" from="CanvasLayer/GameOverScreen/ButtonContainer/LobbyButton" to="CanvasLayer" method="_on_lobby_button_down"]
[connection signal="button_down" from="CanvasLayer/GameOverScreen/ButtonContainer/QuitButton" to="CanvasLayer" method="_on_quit_button_down"]
